<resources>
    <string name="app_name">通话记录本</string>
    <string name="toolbar_title">Call Log Infinity</string>

    <!--菜单栏信息-->
    <string name="menuSettings">设置</string>
    <string name="menuAbount">关于</string>
    <string name="menuSetTheme">设置主题</string>
    <string name="menuCopy">复制DB到SD卡</string>
    <string name="menuExport">导出DB为CSV文件</string>
    <string name="menuRefresh">刷新DB联系人</string>
    <string name="menuClear">清空数据库表格</string>
    <string name="menuTable">数据库可视化</string>
    <!--菜单栏信息-->

    <string name="refreshDatabaseMode">刷新模式</string>

    <string-array name="refreshDatabaseModeItems">
        <item>完全刷新：以系统通讯录为准覆盖数据库.</item>
        <item>增量刷新：只更新存在于系统通讯录中的电话号码，其余不作处理.</item>
    </string-array>

    <!--主体颜色-->
    <string name="themeDialog">themeDialog</string>
    <string name="theme">theme</string>
    <string name="themePrimaryColor">primary</string>
    <string name="themePrimaryDarkColor">primaryDark</string>
    <string name="themePrimaryLightColor">primaryLight</string>
    <string name="themeAccentColor">accent</string>
    <!--主体颜色-->

    <string name="recentCallString">最近通话</string>
    <string name="unkownPhoneNumber">xxx</string>

    <!--通话记录数据库的信息-->
    <string name="CallLogDatabaseTable">CallLogModelDBFlow</string>
    <string name="CallLogDatabaseTableColumnTime">dateInMilliseconds</string>
    <string name="CallLogDatabaseTableColumnContactsName">contactsName</string>
    <string name="CallLogDatabaseTableColumnPhoneNumber">phoneNumber</string>
    <string name="CallLogDatabaseTableColumnDuration">duration</string>
    <string name="CallLogDatabaseTableColumnCallType">callType</string>
    <string name="CallLogDatabaseTableColumnCounts">counts</string>
    <!--通话记录数据库的信息-->

    <!--手机号码归属地数据库信息-->
    <string name="CallerLocationDatabaseName">phone_number_attribution.db</string>
    <string name="CallerLocationDatabaseTable">cellphone_loc</string>
    <string name="CallerLocationDatabaseTableColumnNumber">number</string>
    <string name="CallerLocationDatabaseTableColumnArea">area</string>
    <string name="CallerLocationDatabaseTableColumnOperator">operator</string>
    <string name="UnkownOperator"></string>
    <string name="UnkownArea">未知归属地</string>
    <!--手机号码归属地数据库信息-->

    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="search">搜索</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_call_log_detail_info">CallLogDetailInfoActivity</string>

    <!--清空数据库对话框-->
    <string name="clearDatabaseTableTitle">清空数据库？</string>
    <string name="clearDatabaseTablePrompt">
        <![CDATA[
                该操作将清空数据库，<strong>建议先备份数</strong>，然后再进行清空操作.
        ]]>
    </string>
    <string name="backupThenClear">备份后清空</string>
    <string name="goOn">继续</string>
    <string name="clearDatabaseTableSuccess">数据库已清空</string>
    <!--清空数据库对话框-->

    <string name="refusePermissionMessage">您拒绝了权限申请，功能无法使用</string>

    <!--新增通话记录数量提示信息-->
    <string name="newRecordMessage">新增 %1$d 条通话记录</string>
    <string name="newRecordNull">无新的通话记录！</string>
    <!--新增通话记录数量提示信息-->

    <!--数据操作的提示信息-->
    <string name="updateDatabaseIng">正在更新数据库，请稍后...</string>
    <string name="readDatabaseIng">正在读取，请稍后...</string>
    <string name="readSystemContactsFailed">读取系统联系人信息失败</string>
    <!--数据操作的提示信息-->

    <!--日期格式-->
    <string name="yearMonthDayHourMinuteSecond">yyyy_MM_dd_HH_mm_ss</string>
    <string name="yearMonthDay">yyyy年M月d日</string>
    <string name="allDateInformation">yyyy年MM月dd日 HH:mm:ss</string>
    <string name="monthDayHourMinute">M月d日 HH:mm</string>
    <string name="hourMinute">HH:mm</string>
    <string name="todayCall">今天 %1$s</string>
    <string name="yesterdayCall">昨天 %1$s</string>
    <string name="hourName">小时</string>
    <string name="minuteName">分</string>
    <string name="secondName">秒</string>
    <!--日期格式-->

    <!--电话接通信息-->
    <string name="callInStringName">呼入</string>
    <string name="callOutStringName">呼出</string>
    <string name="callDuration">%1$s %2$s</string>
    <string name="callMissed">未接</string>
    <string name="callOutFailed">未接通</string>
    <string name="callCountsMessage">(%1$d)</string>
    <string name="countsPhoneNumberAreaOperatorText">%1$s%2$s  %3$s  %4$s</string>
    <string name="phoneNumberAreaOperatorText">%1$s  %2$s  %3$s</string>
    <!--电话接通时间信息-->

    <string name="copyDatabaseSuccess">复制成功，见“%1$s/日期_%2$s”</string>
    <string name="copyDatabaseFailed">抱歉，复制失败！</string>

    <!--搜索对话框-->
    <string name="searchTitle">搜索通话记录</string>
    <string name="searchName">姓名</string>
    <string name="searchPhoneNumber">电话号码</string>
    <string name="searchDuration">通话时长</string>
    <string name="searchDurationMinimum">时长下限</string>
    <string name="searchDurationMaximum">时长上限</string>
    <string name="searchDate">通话日期</string>
    <string name="searchDateStart">起始日期</string>
    <string name="searchDateEnd">截止日期</string>
    <string name="searchCallType">通话类型</string>
    <string name="searchDefault">默认 ></string>
    <string name="searchSetFinish">已设置 ></string>
    <string name="searchSetDefaultBtn">恢复默认</string>
    <string name="searchDateFormat">%1$d年%2$d月%3$d日</string>

    <string name="searchNameContent"></string>
    <string name="searchDurationMinimumTitle">通话时长下限</string>
    <string name="searchDurationMaximumTitle">通话时长上限</string>
    <string name="searchDurationContentTips">输入单位为秒.\n提示：1分钟=60秒，一小时=3600秒.</string>

    <string name="searchErrorDialogTitle">输入信息不合规</string>
    <string name="searchInputError">
         <![CDATA[
        请检查：\n(1) 搜索条件为<strong>空</strong>？\n(2) 起始日期 <strong>大于</strong> 截止日期？\n(3) 时长上限 <strong>小于</strong> 时长下限？
        ]]>
    </string>

    <string name="searchResultCount">搜到 %1$d 条数据</string>

    <string name="searchCallTypeAll">所有</string>
    <string name="searchCallTypeIn">来电</string>
    <string name="searchCallTypeOut">去电</string>
    <string name="searchCallTypeMiss">未接</string>
    <string name="title_activity_search">搜索</string>
    <string name="title_activity_database_to_map">DatabaseToMapActivity</string>
    <!--搜索对话框-->

    <!--数据库可视化-->
    <string name="countPieChartTitle">表1&#160;&#160;累计通话次数</string>
    <string name="countBarChartTitle">表2&#160;&#160;通话次数排名(单位:次)</string>
    <string name="durationPieChartTitle">表3&#160;&#160;累计通话时长</string>
    <string name="durationBarChartTitle">表4&#160;&#160;通话时长排名(单位:秒)</string>
    <string name="durationDescription">单位:秒</string>
    <string name="countDescription">单位:次</string>

    <string name="madeCallCounts">去电次数</string>
    <string name="recievedCallCounts">来电次数</string>
    <string name="totalCallCounts">总计: %1$s 次</string>
    <string name="madeCallDuration">去电时长</string>
    <string name="recievedCallDuration">来电时长</string>
    <string name="totalDuration">总计: %1$s 秒</string>

    <!--输出CSV文件-->
    <string name="csvFileTitle">姓名,电话号码,通话日期,通话时长,类型,归属地,运营商</string>
    <string name="csvLineFormat">%1$s,%2$s,%3$s,%4$s,%5$s,%6$s,%7$s</string>
    <string name="exportDatabaseSuccess">导出成功，见“%1$s”目录</string>
    <string name="exportDatabaseFailed">抱歉，导出失败！</string>
</resources>

