<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <!--表1  累计通话次数-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/material_design_item_margin">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/count_chart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/pieChartHeight"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/count_chart"
                android:gravity="center"
                android:text="@string/countPieChartTitle"
                android:textSize="16dp"
                android:textColor="@color/black"/>
        </RelativeLayout>

        <!--表2  通话次数排名前10位的联系人-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_design_item_margin"
            android:layout_marginBottom="@dimen/material_design_item_margin">

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/count_bar_chart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/barChartHeight"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/count_bar_chart"
                android:layout_marginTop="@dimen/material_design_item_margin"
                android:gravity="center"
                android:text="@string/countBarChartTitle"
                android:textSize="16dp"
                android:textColor="@color/black"/>
        </RelativeLayout>

        <!--表3  累计通话时长-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_design_item_margin"
            android:layout_marginBottom="@dimen/material_design_item_margin">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/duration_chart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/pieChartHeight"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/duration_chart"
                android:gravity="center"
                android:text="@string/durationPieChartTitle"
                android:textSize="16dp"
                android:textColor="@color/black"/>
        </RelativeLayout>

        <!--表4  通话时长排名前10位的联系人-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/material_design_item_margin"
            android:layout_marginBottom="@dimen/material_design_item_margin">

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/duration_bar_chart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/barChartHeight"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/duration_bar_chart"
                android:layout_marginTop="@dimen/material_design_item_margin"
                android:gravity="center"
                android:text="@string/durationBarChartTitle"
                android:textSize="16dp"
                android:textColor="@color/black"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>
